# kdk

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  INITIAL_PROMPT.md  INSTRUCTIONS.md  README.md  SECURITY.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/agents/: README.md  code-reviewer.agent.md  completion-checker.agent.md  formatter.agent.md  security-reviewer.agent.md
.github/instructions/: default.instructions.md
.github/workflows/: ci.yml  docs.yml
crates/kdk-entropy/: Cargo.toml
crates/kdk-mnemonic/: Cargo.toml
crates/kdk-mnemonic/examples/: games.rs  games_extended.rs  secret_leak.rs
crates/kdk-mnemonic/src/: coin.rs  deck.rs  dice.rs  error.rs  game.rs  lib.rs  mnemonic.rs  utils.rs
crates/kdk-mnemonic/tests/: coin.rs  deck.rs  dice.rs  trezor_vectors.rs
crates/kdk-zeroize/: Cargo.toml
kdk_entropy/: all.html  enum.Coin.html  enum.Deck.html  enum.Dice.html  enum.EntropyError.html  fn.coin_to_entropy.html  fn.deck_to_entropy.html  fn.dice_to_entropy.html  fn.max_draws.html  fn.max_flips.html  fn.max_rolls.html  fn.min_draws.html  fn.min_flips.html  fn.min_rolls.html  index.html  sidebar-items.js  type.CoinEntropy.html  type.DeckEntropy.html  type.DiceEntropy.html
kdk_entropy/coin/: fn.coin_to_entropy.html  fn.max_flips.html  fn.min_flips.html
kdk_entropy/deck/: fn.deck_to_entropy.html  (+2 more)
kdk_zeroize/: all.html  fn.wipe_in_place_mut.html  index.html  sidebar-items.js  struct.SensitiveBytes.html  trait.Sensitive.html  trait.SensitiveMut.html
search.index/: 0119231557.js  6679eaa5f0.js  7c9bd889c1.js  root.js
(+58 files in other folders)
